  memmove functions has been fixed.  Discovered by Jason Royes and Samual
  Dytrych of the Cisco Security Assessment and Penetration Team (See
  TALOS-2020-1019).

  CVE-2020-10029: Trigonometric functions on x86 targets suffered from stack
  corruption when they were passed a pseudo-zero argument.  Reported by Guido
  Vranken / ForAllSecure Mayhem.

The following bugs are resolved with this release:

  [6889] 'PWD' mentioned but not specified
  [16335] Feature test macro documentation incomplete and out of date
  [17343] Signed integer overflow in /stdlib/random_r.c
  [18018] Additional $ORIGIN handling issues (CVE-2011-0536)
  [18035] Fix pldd hang
  [18830] locale: iconv -c -f ascii with >buffer size worth of input before
    invalid input drops valid char
  [19519] iconv(1) with -c option hangs on illegal multi-byte sequences
    (CVE-2016-10228)
  [20419] files with large allocated notes crash in open_verify
  [20568] Fix crash in _IO_wfile_sync
  [21269] i386 sigaction sa_restorer handling is wrong
  [21812] getifaddrs: Don't return ifa entries with NULL names
  [21942] _dl_dst_substitute incorrectly handles $ORIGIN: with AT_SECURE=1
  [22342] NSCD not properly caching netgroup
  [22638] sparc: static binaries are broken if glibc is built by gcc
    configured with --enable-default-pie
  [22644] memmove-sse2-unaligned on 32bit x86 produces garbage when crossing
    2GB threshold
  [22735] Misleading typo in time.h source comment regarding CLOCKS_PER_SECOND
  [22753] libc: preadv2/pwritev2 fallback code should handle offset=-1
  [22786] Stack buffer overflow in realpath() if input size is close
    to SSIZE_MAX
  [22797] Linux: use reserved name __key in pkey_get
  [22807] PTRACE_* constants missing for powerpc
  [22818] posix/tst-glob_lstat_compat failure on alpha
  [22827] RISC-V ELF64 parser mis-reads flag in ldconfig
  [22848] ca_ES: update date definitions from CLDR
  [22884] RISCV fmax/fmin handle signalling NANs incorrectly