@@ -92,6 +92,10 @@ Security related changes:
   corruption when they were passed a pseudo-zero argument.  Reported by Guido
   Vranken / ForAllSecure Mayhem.
 
+  CVE-2020-27618: An infinite loop has been fixed in the iconv program when
+  invoked with input containing redundant shift sequences in the IBM1364,
+  IBM1371, IBM1388, IBM1390, or IBM1399 character sets.
+
 The following bugs are resolved with this release:
 
   [6889] 'PWD' mentioned but not specified
@@ -183,6 +187,8 @@ The following bugs are resolved with this release:
   [25423] Array overflow in backtrace on powerpc
   [25487] sinl() stack corruption from crafted input (CVE-2020-10029)
   [25620] libc: Signed comparison vulnerability in the ARMv7 memcpy() (CVE-2020-6096)
+  [26224] iconv hangs when converting some invalid inputs from several IBM
+    character sets (CVE-2020-27618)
   [26383] bind_textdomain_codeset doesn't accept //TRANSLIT anymore
 
 
